[Feat] next, prev btn add

--- a/안준우/slide.css
+++ b/안준우/slide.css
@@ -64,38 +64,38 @@ li {
   right: -50px;
 }
 .slide-wrap {
-  border: 5px solid lightgreen;
-  /* overflow: hidden; */
+  /* border: 5px solid lightgreen; */
+  overflow: hidden;
 }
 .sliderUl {
   border: 5px slateblue solid;
   display: flex;
   width: 300%;
-  /* transform: translateX(-33.3333%); */
+  transform: translateX(-33.3333%);
 }
-.sldier {
+.slider {
   border: 5px solid red;
   width: calc(100% / 3);
 }
-.sldier:nth-of-type(3) ~ .sldier {
+.slider:nth-of-type(3) ~ .slider {
   display: none;
 }
-.sldier > div {
+.slider > div {
   position: relative;
   padding-top: 35%;
   overflow: hidden;
 }
-.sldier > div > * {
+.slider > div > * {
   position: absolute;
   top: 0;
   left: 0;
 }
-.sldier > div img {
+.slider > div img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.sldier > div p {
+.slider > div p {
   z-index: 1;
   background-color: black;
   color: white;
