--- a/김도연/index.css
+++ b/김도연/index.css
@@ -8,21 +8,21 @@ li {
 }
 
 .slide {
-  border: 5px solid lightgray;
+  /* border: 5px solid lightgray; */
   max-width: 600px;
   width: 80%;
   margin: auto;
   position: relative;
 }
-.slide-wrap {
+/* .slide-wrap {
   border: 1px solid red;
-}
+} */
 .btn {
   cursor: pointer;
 }
 .btn,
 .slider-dot {
-  border: 5px solid rgb(0, 213, 255);
+  /* border: 5px solid rgb(0, 213, 255); */
   position: absolute;
 }
 .slider-dot {
@@ -35,6 +35,12 @@ li {
   height: 25px;
   border-radius: 50%;
   background-color: tomato;
+
+  /* style 수정 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .slider-dot > span:first-of-type {
   background-color: black;
@@ -55,6 +61,13 @@ li {
 
 .btn {
   top: 50%;
+
+  /* style 수정 */
+  padding: 4px;
+  border: none;
+  border-radius: 4px;
+  background: rgb(0 0 0 / 20%);
+  color: black;
 }
 
 .prev {
@@ -64,17 +77,17 @@ li {
   right: -50px;
 }
 .slide-wrap {
-  border: 5px solid lightgreen;
-  /* overflow: hidden; */
+  /* border: 5px solid lightgreen; */
+  overflow: hidden;
 }
 .sliderUl {
-  border: 5px slateblue solid;
+  /* border: 5px slateblue solid; */
   display: flex;
   width: 300%;
   /* transform: translateX(-33.3333%); */
 }
 .slider {
-  border: 5px solid red;
+  /* border: 5px solid red; */
   width: calc(100% / 3);
 }
 .slider:nth-of-type(3) ~ .slider {
